# web_scraper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dev.sh  modify_driver.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
images/: scraper_aws_setup.excalidraw
src/: Makefile  constants.py  content_parser.py  main.py  scraper_constants.py  scraper_def.py  site_scraper.py  utils.py  worten_scraper.py
src/tests/: README.md  conftest.py  test_base_scraper.py  test_worten_scraper.py
src/web_scraper/: README.md  __init__.py  config.py  content_parser.py  main.py  scraper_base.py  scraper_config.py  scraper_worten.py  scraper_worten_batch.py  site_scraper.py  types.py  utils.py  worten_scraper.py
src/web_scraper/extract/: README.md  scraper_base.py  scraper_config.py  scraper_worten.py  scraper_worten_batch.py
src/web_scraper/load/: persist.py
src/web_scraper/support/: errors.py  types.py
src/web_scraper/transform/: content_parser.py
